[package]
name = "getrandom"
version = "0.2.15"
edition = "2021"

[dependencies]
once_cell = { version = "1.19.0", optional = true }

risc0-zkvm = { version = "1.0", default-features = false, features = [
  "std",
], optional = true }

[features]
default = ["memory"]
recordable = ["once_cell"]
risc0-guest = ["risc0-zkvm"]
memory = []
